--- a/WakaTime/WakaTime-Info.plist
+++ b/WakaTime/WakaTime-Info.plist
@@ -9,11 +9,13 @@
 	<key>SUPublicEDKey</key>
 	<string>6I/0TFjR4Fwf/dRPerG9McAsG5czi7yNBgW6usORg+g=</string>
 	<key>SUAllowsAutomaticUpdates</key>
-	<string>YES</string>
+	<true/>
 	<key>SUEnableAutomaticChecks</key>
-	<string>YES</string>
+	<true/>
+	<key>SUShowReleaseNotes</key>
+	<false/>
 	<key>SUAutomaticallyUpdate</key>
-	<string>YES</string>
+	<true/>
 	<key>LSUIElement</key>
 	<true/>
 	<key>CFBundleURLTypes</key>
