--- a/project.yml
+++ b/project.yml
@@ -7,7 +7,7 @@ options:
 packages:
   Sparkle:
     url: https://github.com/sparkle-project/Sparkle
-    from: 2.0.0
+    from: 2.5.0-beta.1
   Firebase:
     url: https://github.com/firebase/firebase-ios-sdk
     from: 10.0.0
