--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -229,7 +229,7 @@ jobs:
         id: prepare
         run: |
           mkdir release
-          mv ./WakaTime.zip release/macos-wakatime-${{ needs.version.outputs.semver_tag }}.zip
+          mv ./WakaTime.zip release/macos-wakatime.zip
       -
         name: "Create release"
         uses: softprops/action-gh-release@master
@@ -241,7 +241,7 @@ jobs:
           target_commitish: ${{ github.sha }}
           draft: false
           files: |
-            ./release/macos-wakatime-${{ needs.version.outputs.semver_tag }}.zip
+            ./release/macos-wakatime.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
